--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,6 +3,7 @@
   service:
     name: "{{ php_webserver_daemon }}"
     state: restarted
+  become: yes
   notify: restart php-fpm
   when: php_enable_webserver | bool
 
@@ -10,4 +11,5 @@
   service:
     name: "{{ php_fpm_daemon }}"
     state: restarted
+  become: yes
   when: php_enable_php_fpm | bool
