--- a/tasks/configure-opcache.yml
+++ b/tasks/configure-opcache.yml
@@ -10,6 +10,7 @@
   file:
     path: "{{ item.1.path }}"
     state: absent
+  become: yes
   when: php_opcache_conf_filename != (item.1.path.split('/') | last)
   with_subelements:
     - "{{ php_installed_opcache_confs.results }}"
@@ -24,6 +25,7 @@
     group: root
     force: true
     mode: 0644
+  become: yes
   with_items: "{{ php_extension_conf_paths }}"
   when: php_opcache_enable | bool
   notify: restart webserver
@@ -32,6 +34,7 @@
   file:
     path: "{{ item }}/{{ php_opcache_conf_filename }}"
     state: absent
+  become: yes
   with_items: "{{ php_extension_conf_paths }}"
   when: not php_opcache_enable
   notify: restart webserver
