--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -4,6 +4,7 @@
     path: "{{ item }}"
     state: directory
     follow: true
+  become: yes
   with_flattened:
     - "{{ php_conf_paths }}"
     - "{{ php_extension_conf_paths }}"
@@ -15,6 +16,7 @@
     owner: root
     group: root
     mode: 0644
+  become: yes
   with_items: "{{ php_conf_paths }}"
   notify: restart webserver
   when: php_use_managed_ini | bool
